[package]
name = "mdbook-nadi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = "4.*.*"
mdbook = "0.4.*"
serde = "1.0.*"
serde_json = "1.0.*"
pulldown-cmark = "0.10.3"
pulldown-cmark-to-cmark = "14.0.1"
nadi_core = {path = "../nadi_core/"}
string-template-plus = "0.4.3"
strip-ansi-escapes = "0.2.1"
